syntax = "proto3";

package pb;

import "admin.proto";

option go_package = 'github.com/MonitorAllen/nostalgia/pb';

message UpdateAdminRequest {
  int64 id = 1;
  optional string username = 2;
  optional string password = 3;
  optional bool is_active = 4;
  optional int64 role_id = 5;
}

message UpdateAdminResponse {
  Admin admin = 1;
}